--- a/webapp/view/PP_Process.view.xml
+++ b/webapp/view/PP_Process.view.xml
@@ -3,60 +3,60 @@
     xmlns="sap.m"
     xmlns:form="sap.ui.layout.form" displayBlock="true">
 
-    <Page id="page" title="Process Packaging Proposal" class="sapUiContentPadding" showNavButton="true" navButtonPress=".onNavBack">
+    <Page id="page" title="{i18n>ppProcess.pageTitle}" class="sapUiContentPadding" showNavButton="true" navButtonPress=".onNavBack">
 
         <content>
             <VBox renderType="Div" width="100%">
 
                 <HBox class="sapUiLargeMargin sapUiResponsiveContentPadding" justifyContent="SpaceBetween">
                     <HBox alignItems="Center">
-                        <Text text="Package ID:" design="Bold" class="sapUiSmallMarginEnd"/>
+                        <Text text="{i18n>ppProcess.packageIdLabel}" design="Bold" class="sapUiSmallMarginEnd"/>
                         <Text text="{local>/Header/PackageId}"/>
                     </HBox>
 
                     <HBox alignItems="Center">
-                        <Text text="Plant:" design="Bold" class="sapUiSmallMarginEnd"/>
+                        <Text text="{i18n>ppProcess.plantLabel}" design="Bold" class="sapUiSmallMarginEnd"/>
                         <Text text="{local>/Header/PlantDisplay}"/>
                     </HBox>
                 </HBox>
 
                 <form:SimpleForm id="frmProcess" editable="true" layout="ResponsiveGridLayout" labelSpanL="3" labelSpanM="4" emptySpanL="1" emptySpanM="1" columnsL="2" columnsM="1">
 
-                    <Label text="Weight (Gross)"/>
+                    <Label text="{i18n>ppProcess.weightGross}"/>
                     <Input value="{local>/Process/WeightGross}" type="Number" />
 
-                    <Label text="Weight (Dry Ice)"/>
+                    <Label text="{i18n>ppProcess.weightDryIce}"/>
                     <Input value="{local>/Process/WeightDryIce}" type="Number" />
 
-                    <Label text="Units"/>
-                    <Input value="{local>/Process/WeightUnits}" placeholder="LB / KG" editable="false"/>
+                    <Label text="{i18n>ppProcess.units}"/>
+                    <Input value="{local>/Process/WeightUnits}" placeholder="{i18n>ppProcess.unitsPlaceholder}" editable="false"/>
 
-                    <Label text="Packaging Material"/>
+                    <Label text="{i18n>ppProcess.packagingMaterial}"/>
                     <HBox>
                         <Input value="{local>/Process/PackageMaterial}" width="100%"/>
                         <!-- This calls the helper inherited from BaseController -->
-                        <Button icon="sap-icon://value-help" press=".onVH_PackageMaterial" tooltip="Search Packaging Material" />
+                        <Button icon="sap-icon://value-help" press=".onVH_PackageMaterial" tooltip="{i18n>ppProcess.searchPackagingMaterial}" />
                     </HBox>
 
-                    <Label text="Comments"/>
+                    <Label text="{i18n>ppProcess.comments}"/>
                     <TextArea value="{local>/Process/Comments}" rows="3" />
                 </form:SimpleForm>
 
                 <Toolbar class="sapUiTinyMarginTop">
-                    <Title text="Assigned Containers" level="H3"/>
+                    <Title text="{i18n>ppProcess.assignedContainers}" level="H3"/>
                     <ToolbarSpacer/>
-                    <Button id="btnGetSamples" text="Get Samples" enabled="{= ${local>/CanGetSamples} === true }" press=".onGetSamplesFromProposal"/>
-                    <Button id="btnProcess" type="Emphasized" text="Process Packaging Proposal" press=".onProcessProposal"/>
+                    <Button id="btnGetSamples" text="{i18n>ppProcess.getSamples}" enabled="{= ${local>/CanGetSamples} === true }" press=".onGetSamplesFromProposal"/>
+                    <Button id="btnProcess" type="Emphasized" text="{i18n>ppProcess.processShipment}" press=".onProcessProposal"/>
                 </Toolbar>
 
                 <Table id="tblProposalItems" mode="SingleSelectLeft" items="{path: 'local>/ProposalItems'}" selectionChange=".onSelectProposalItem">
 
                     <columns>
                         <Column>
-                            <Text text="Container ID"/>
+                            <Text text="{i18n>ppProcess.containerId}"/>
                         </Column>
                         <Column>
-                            <Text text="Inspection ID"/>
+                            <Text text="{i18n>ppProcess.inspectionId}"/>
                         </Column>
                     </columns>
 
